<resources>
    <string name="app_name">集漫</string>
    <string name="title_main">集漫阅读器</string>
    <string name="subtitle_main">藏万卷经典，阅一页山河</string>
    <string name="title_reader">阅读器</string>
    <string name="title_settings">设置</string>
    <string name="btn_import">导入漫画</string>
    <string name="btn_settings">设置</string>
    <string name="empty_state">暂无漫画，点击导入</string>
    <string name="action_import">导入文件</string>
    <string name="action_delete">删除</string>
    <string name="action_favorite">收藏</string>
    <string name="action_unfavorite">取消收藏</string>
    <string name="action_open">打开</string>
    <string name="label_page">第 %1$d 页 / 共 %2$d 页</string>
    <string name="label_progress">阅读进度</string>
    <string name="setting_theme">主题设置</string>
    <string name="setting_language">语言设置</string>
    <string name="setting_read_direction">阅读模式</string>
    <string name="setting_page_mode">翻页模式</string>
    <string name="setting_auto_rotate">自动旋转</string>
    <string name="setting_cache_size">缓存大小</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_about">关于软件</string>
    <string name="dark_mode">深色模式</string>
    <string name="light_mode">浅色模式</string>
    <string name="system_mode">跟随系统</string>
    <string name="language_cn">中文</string>
    <string name="language_en">English</string>
    <string name="language_system">跟随系统</string>
    <string name="direction_ltr">从左到右</string>
    <string name="direction_rtl">从右到左</string>
    <string name="direction_vertical">竖版条漫</string>
    <string name="mode_slide">滑动翻页</string>
    <string name="mode_cover">封面翻页</string>
    <string name="mode_none">无动画</string>
    <string name="confirm_delete">确定要删除这本漫画吗？</string>
    <string name="import_success">导入成功</string>
    <string name="import_failed">导入失败</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="loading">加载中...</string>
    <string name="sort_name">按文件名</string>
    <string name="sort_size">按大小</string>
    <string name="sort_type">按类型</string>
    <string name="sort_date">按添加时间</string>
    <string name="category_country">地区分类</string>
    <string name="category_genre">题材分类</string>
    <string name="category_custom">自定义分类</string>
    <string name="category_cn">国漫</string>
    <string name="category_kr">韩漫</string>
    <string name="category_hk">港漫</string>
    <string name="category_jp">日漫</string>
    <string name="category_other">其他</string>
    <string name="genre_xuanhuan">玄幻</string>
    <string name="genre_guimi">诡秘</string>
    <string name="genre_wuxia">武侠</string>
    <string name="genre_xiuxian">修仙</string>
    <string name="genre_moshi">末世</string>
    <string name="genre_hougong">后宫</string>
    <string name="genre_xitong">系统</string>
    <string name="genre_chuanyue">穿越</string>
    <string name="genre_xiaoyuan">校园</string>
    <string name="genre_xuanyi">悬疑</string>
    <string name="genre_lianai">恋爱</string>
    <string name="genre_tl">TL</string>
    <string name="genre_bl">BL</string>
    <string name="genre_bg">BG</string>
    <string name="brightness">亮度</string>
    <string name="progress">进度</string>
    <string name="mode_color">彩色模式</string>
    <string name="mode_grayscale">黑白模式</string>
    <string name="prev_file">上一文件</string>
    <string name="next_file">下一文件</string>
    <string name="auto_page_turn">自动翻页</string>
    <string name="auto_page_turn_on">自动翻页已开启</string>
    <string name="auto_page_turn_off">自动翻页已关闭</string>
    <string name="about_title">关于集漫</string>
    <string name="about_content">本软件为开源免费项目、非盈利，仅为阅读爱好者收藏分享使用。

任何转卖、获利行为均非作者所为，请警惕付费。

若您觉得本软件好用，愿意鼓励集漫持续优化，可以通过下方联系我们，感谢支持！</string>
    <string name="contact_wechat">【新月资源库】</string>
    <string name="contact_email">1411779488@qq.com</string>
    <string name="contact_alipay">未忘仙 | 15719719841</string>
    <string name="today_reading">今日阅读</string>
    <string name="total_reading">累计阅读</string>
    <string name="duration">时长</string>
    <string name="pages">页数</string>
    <string name="read_count">次数</string>
    <string name="custom_tag">自定义标签</string>
    <string name="custom_tag_hint">输入自定义标签名称</string>
    <string name="toc">目录</string>
    <string name="close">关闭</string>
    <string name="no_toc">暂无目录</string>
    <string name="settings">设置</string>
</resources>
